[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarmor"
version = "0.2.0"
description = "Enterprise-Grade Fault Tolerance and Resilience for AI Agents — circuit breakers, bulkheads, retries, fallbacks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel López Orta", email = "daniellopezorta39@gmail.com" }]
keywords = [
    "agent", "circuit-breaker", "bulkhead", "fault-tolerance", "retry", "fallback",
    "resilience", "production", "llm", "reliability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.0", "anthropic>=0.30", "prometheus-client>=0.20"]
metrics = ["prometheus-client>=0.20"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/daniellopez882/agentarmor"
Repository = "https://github.com/daniellopez882/agentarmor"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
